# rust-zcash

./: .travis.yml  Cargo.toml  README.md
src/: cli.yml  config.rs  main.rs  rpc.rs
tests/: zcash.conf
