[package]
authors = ["Durga <DurgaMa@users.noreply.github.com>"]
description = "Rust Zcash RPC Client"
homepage = "https://github.com/DurgaMa/rust-zcash"
license = "Unlicense"
name = "zcash"
readme = "README.md"
repository = "https://github.com/DurgaMa/rust-zcash"
version = "0.1.0"

[[bin]]
name = "zcash-cli"

[dependencies]
clap = {version = "2.20.5", features = ["yaml"]}
