[package]
authors = ["Durga <DurgaMa@users.noreply.github.com>"]
description = "Rust Zcash RPC Client"
homepage = "https://github.com/DurgaMa/rust-zcash"
license = "Unlicense"
name = "zcash"
readme = "README.md"
repository = "https://github.com/DurgaMa/rust-zcash"
version = "0.1.0"

[[bin]]
name = "zcash-cli"

[dependencies]
derive_builder = "0.3.0"
env_logger = "0.4.1"
hyper = "0.10.5"
log = "0.3.6"
reqwest = "0.4.0"
serde = "0.9.11"
serde_derive = "0.9.11"

[dependencies.clap]
features = ["yaml"]
version = "2.20.5"
